[package]
name = "uo2d"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
bincode = { version = "1.3.3" }
num-traits = { version = "0.2.17" }
num-derive = { version = "0.4.2" }
chrono = { version = "0.4.33" }
